Add workstyle icon for Zen Browser

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -29,6 +29,7 @@
 "hacker news"=""
 "private browsing" = "󰗹"
 "firefox" = ""
+"zen browser" = ""
 "libreoffice calc" = ""
 "libreoffice writer" = ""
 "libreoffice" = ""
