Update cursor workstyle icon

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -50,7 +50,7 @@
 "pavucontrol" = "󰕾"
 "ulauncher" = "▼"
 "code" = "󰨞"
-"cursor" = "󰈚"
+"cursor" = "󰋘"
 "nemo" = "󰉋"
 "file-roller" = "󰀼"
 "sublime_merge" = ""
