Add KSP to workstyle

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -109,6 +109,7 @@
 "popup-term"="󰄛"
 "limo"="L"
 "characters"="󱁯"
+"kerbal space program"=""
 [other]
 fallback_icon = "🤨"
 deduplicate_icons = false
