Add workstyle icon for fastmail app

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -111,6 +111,7 @@
 "characters"="󱁯"
 "kerbal space program"=""
 "todoist"=""
+"fastmail"="󰇮"
 [other]
 fallback_icon = "🤨"
 deduplicate_icons = false
