--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -47,6 +47,7 @@
 "psst-gui" = "󰓇"
 "foot" = ""
 "gnome-terminal-server"="󰆍"
+"ghostty"="󰆍"
 "sublime_text" = ""
 "pavucontrol" = "󰕾"
 "ulauncher" = "▼"
