Add handling for helium

--- a/roles/sway/files/workstyle.toml
+++ b/roles/sway/files/workstyle.toml
@@ -113,6 +113,7 @@
 "kerbal space program"=""
 "todoist"=""
 "fastmail"="󰇮"
+"helium"=""
 [other]
 fallback_icon = "🤨"
 deduplicate_icons = false
