Downgrade ghostty to ssh-env mode

--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -50,4 +50,4 @@
 
 background = #000000
 background-opacity = 0.88
-shell-integration-features = ssh-terminfo,ssh-env
+shell-integration-features = ssh-env
