--- a/roles/sway/tasks/apt.yml
+++ b/roles/sway/tasks/apt.yml
@@ -1,4 +1,5 @@
 - name: Add repos
+  when: distro == "ubuntu"
   loop: "{{ sway_apt_repos }}"
   become: yes
   apt_repository:
@@ -6,5 +7,11 @@
     state: present
 
 - name: Install apt packages
+  when: distro == "ubuntu"
   become: yes
   apt: name={{ sway_apt_packages }} state=present
+
+- name: Install cachyos packages
+  when: distro == "cachyos"
+  become: yes
+  package: name={{ sway_cachyos_packages }} state=present
