--- a/local.yml
+++ b/local.yml
@@ -1,5 +1,5 @@
 - name: CachyOS specific setup
-  hosts: ["dux-cachytest"]
+  hosts: ["dux"]
   roles:
     - { role: ssh-agent, tags: ["ssh-agent"] }
     - { role: paru, tags: ["paru"] }
@@ -17,12 +17,12 @@
     # - { role: python, tags: ["python"] }
     # - { role: pipx, tags: ["pipx"] }
     # - { role: dotfiles, tags: ["dotfiles"] }
+    - { role: git, tags: ["git"] }
     - { role: fish, tags: ["fish"] }
     - { role: fonts, tags: ["fonts"] }
     - { role: gnome, tags: ["gnome"] }
     - { role: sway, tags: ["sway"] }
     # - { role: xdg, tags: ["xdg"] }
-    - { role: git, tags: ["git"] }
     # - { role: vim, tags: ["vim"] }
     - { role: sublime, tags: ["sublime"] }
     # - { role: google-chrome, tags: ["google-chrome"] }
