--- a/local.yml
+++ b/local.yml
@@ -40,7 +40,7 @@
     # - { role: rust, tags: ["rust"] }
     # - { role: subsurface, tags: ["subsurface"] }
     # - { role: flatpak, tags: ["flatpak"] }
-    # - { role: claude, tags: ["claude"] }
+    - { role: claude, tags: ["claude"] }
     - { role: ghostty, tags: ["ghostty"] }
     - { role: games, tags: ["games"] }
     - { role: virt, tags: ["virt"] }
