Fixup ghostty getting stuck on previous directory

--- a/roles/ghostty/files/config
+++ b/roles/ghostty/files/config
@@ -51,3 +51,5 @@
 background = #000000
 background-opacity = 0.88
 shell-integration-features = ssh-env
+working-directory = inherit
+window-inherit-working-directory = false
